cdk.out/BardestAwsResourcesStackNetworkNestedStack48D1966B.nested.template.json
{
  "Resources": {
    "Vpc8378EB38": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "application",
            "Value": "bardest"
          },
          {
            "Key": "environment",
            "Value": "development"
          },
          {
            "Key": "Name",
            "Value": "BardestAwsResourcesStack/NetworkNestedStack/Vpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "BardestAwsResourcesStack/NetworkNestedStack/Vpc/Resource"
      }
    },
    "VpcingressSubnet1Subnet059F22C6": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.0.0/24",
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "application",
            "Value": "bardest"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "ingress"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "environment",
            "Value": "development"
          },
          {
            "Key": "Name",
            "Value": "BardestAwsResourcesStack/NetworkNestedStack/Vpc/ingressSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "BardestAwsResourcesStack/NetworkNestedStack/Vpc/ingressSubnet1/Subnet"
      }
    },
    "VpcingressSubnet1RouteTable804C7A26": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "Tags": [
          {
            "Key": "application",
            "Value": "bardest"
          },
          {
            "Key": "environment",
            "Value": "development"
          },
          {
            "Key": "Name",
            "Value": "BardestAwsResourcesStack/NetworkNestedStack/Vpc/ingressSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "BardestAwsResourcesStack/NetworkNestedStack/Vpc/ingressSubnet1/RouteTable"
      }
    },
    "VpcingressSubnet1RouteTableAssociation5DF54E70": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcingressSubnet1RouteTable804C7A26"
        },
        "SubnetId": {
          "Ref": "VpcingressSubnet1Subnet059F22C6"
        }
      },
      "Metadata": {
        "aws:cdk:path": "BardestAwsResourcesStack/NetworkNestedStack/Vpc/ingressSubnet1/RouteTableAssociation"
      }
    },
    "VpcingressSubnet1DefaultRoute4188A546": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcingressSubnet1RouteTable804C7A26"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VpcIGWD7BA715C"
        }
      },
      "DependsOn": [
        "VpcVPCGWBF912B6E"
      ],
      "Metadata": {
        "aws:cdk:path": "BardestAwsResourcesStack/NetworkNestedStack/Vpc/ingressSubnet1/DefaultRoute"
      }
    },
    "VpcingressSubnet2SubnetF175D754": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.1.0/24",
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "application",
            "Value": "bardest"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "ingress"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "environment",
            "Value": "development"
          },
          {
            "Key": "Name",
            "Value": "BardestAwsResourcesStack/NetworkNestedStack/Vpc/ingressSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "BardestAwsResourcesStack/NetworkNestedStack/Vpc/ingressSubnet2/Subnet"
      }
    },
    "VpcingressSubnet2RouteTable8B0E23A7": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "Tags": [
          {
            "Key": "application",
            "Value": "bardest"
          },
          {
            "Key": "environment",
            "Value": "development"
          },
          {
            "Key": "Name",
            "Value": "BardestAwsResourcesStack/NetworkNestedStack/Vpc/ingressSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "BardestAwsResourcesStack/NetworkNestedStack/Vpc/ingressSubnet2/RouteTable"
      }
    },
    "VpcingressSubnet2RouteTableAssociation39E1BA3A": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcingressSubnet2RouteTable8B0E23A7"
        },
        "SubnetId": {
          "Ref": "VpcingressSubnet2SubnetF175D754"
        }
      },
      "Metadata": {
        "aws:cdk:path": "BardestAwsResourcesStack/NetworkNestedStack/Vpc/ingressSubnet2/RouteTableAssociation"
      }
    },
    "VpcingressSubnet2DefaultRoute18203BC3": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcingressSubnet2RouteTable8B0E23A7"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VpcIGWD7BA715C"
        }
      },
      "DependsOn": [
        "VpcVPCGWBF912B6E"
      ],
      "Metadata": {
        "aws:cdk:path": "BardestAwsResourcesStack/NetworkNestedStack/Vpc/ingressSubnet2/DefaultRoute"
      }
    },
    "VpcrdsSubnet1SubnetC2926CEA": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.2.0/28",
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "application",
            "Value": "bardest"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "rds"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "environment",
            "Value": "development"
          },
          {
            "Key": "Name",
            "Value": "BardestAwsResourcesStack/NetworkNestedStack/Vpc/rdsSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "BardestAwsResourcesStack/NetworkNestedStack/Vpc/rdsSubnet1/Subnet"
      }
    },
    "VpcrdsSubnet1RouteTableE62E4ED6": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "Tags": [
          {
            "Key": "application",
            "Value": "bardest"
          },
          {
            "Key": "environment",
            "Value": "development"
          },
          {
            "Key": "Name",
            "Value": "BardestAwsResourcesStack/NetworkNestedStack/Vpc/rdsSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "BardestAwsResourcesStack/NetworkNestedStack/Vpc/rdsSubnet1/RouteTable"
      }
    },
    "VpcrdsSubnet1RouteTableAssociationE01668F2": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcrdsSubnet1RouteTableE62E4ED6"
        },
        "SubnetId": {
          "Ref": "VpcrdsSubnet1SubnetC2926CEA"
        }
      },
      "Metadata": {
        "aws:cdk:path": "BardestAwsResourcesStack/NetworkNestedStack/Vpc/rdsSubnet1/RouteTableAssociation"
      }
    },
    "VpcrdsSubnet2Subnet70A835C8": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.2.16/28",
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "application",
            "Value": "bardest"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "rds"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "environment",
            "Value": "development"
          },
          {
            "Key": "Name",
            "Value": "BardestAwsResourcesStack/NetworkNestedStack/Vpc/rdsSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "BardestAwsResourcesStack/NetworkNestedStack/Vpc/rdsSubnet2/Subnet"
      }
    },
    "VpcrdsSubnet2RouteTable3E531D9B": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "Tags": [
          {
            "Key": "application",
            "Value": "bardest"
          },
          {
            "Key": "environment",
            "Value": "development"
          },
          {
            "Key": "Name",
            "Value": "BardestAwsResourcesStack/NetworkNestedStack/Vpc/rdsSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "BardestAwsResourcesStack/NetworkNestedStack/Vpc/rdsSubnet2/RouteTable"
      }
    },
    "VpcrdsSubnet2RouteTableAssociation25A7BD68": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcrdsSubnet2RouteTable3E531D9B"
        },
        "SubnetId": {
          "Ref": "VpcrdsSubnet2Subnet70A835C8"
        }
      },
      "Metadata": {
        "aws:cdk:path": "BardestAwsResourcesStack/NetworkNestedStack/Vpc/rdsSubnet2/RouteTableAssociation"
      }
    },
    "VpcIGWD7BA715C": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "application",
            "Value": "bardest"
          },
          {
            "Key": "environment",
            "Value": "development"
          },
          {
            "Key": "Name",
            "Value": "BardestAwsResourcesStack/NetworkNestedStack/Vpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "BardestAwsResourcesStack/NetworkNestedStack/Vpc/IGW"
      }
    },
    "VpcVPCGWBF912B6E": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "InternetGatewayId": {
          "Ref": "VpcIGWD7BA715C"
        }
      },
      "Metadata": {
        "aws:cdk:path": "BardestAwsResourcesStack/NetworkNestedStack/Vpc/VPCGW"
      }
    },
    "CDKMetadata": {
      "Type": "AWS::CDK::Metadata",
      "Properties": {
        "Analytics": "v2:deflate64:H4sIAAAAAAAA/0WPTw+CMAzFP4v3MQUT74SD8WIIGK5mGzWWP5vZOoghfHenopz6+mvT15fw+MB3GzG6SNVt1KHk0xkcQV2SUC0LgyuohE/VQ7Hspqs8Y7mXHarSSw30ZqsqjCe4CNnByleWOmcUCkKj/8sstzgIgvXGSRPYoI+BjuK5mC5dSuGrew+aZlaAM96qj9VPz0ybGnjjtkPIFe9DtMYhRtZrwh548a0vzML3W/YAAAA="
      },
      "Metadata": {
        "aws:cdk:path": "BardestAwsResourcesStack/NetworkNestedStack/CDKMetadata/Default"
      }
    }
  }
}
